<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="45dp"
        android:layout_marginTop="60dp"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/usernameEnter"
        app:layout_constraintStart_toEndOf="@+id/usernameTextView"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/passswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameTextView"
        android:layout_margin="45dp"
        android:layout_marginTop="60dp"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/passwordEnter"
        app:layout_constraintStart_toEndOf="@+id/passswordTextView"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:text="@string/loginButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_toast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        android:padding="32dp"
        android:text="@string/login_toast"
        android:textSize="24dp"
        android:textAlignment="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>